@@ -4,14 +4,28 @@ import static frc.robot.auto.AutoActions.*;
 
 import edu.wpi.first.wpilibj2.command.Command;
 import edu.wpi.first.wpilibj2.command.Commands;
+import frc.robot.subsystems.ShootingSubsystem.SpindexerSubsystem;
 import java.util.Collections;
+import java.util.Set;
+import lib.ironpulse.subsystem.position.PositionMotorSubsystem;
+import lib.ironpulse.subsystem.velocity.VelocityMotorSubsystem;
 import lib.ironpulse.swerve.Swerve;
 
 public class AutoRoutines {
     public static Swerve swerve;
+    public static VelocityMotorSubsystem shooter;
+    public static SpindexerSubsystem spindexer;
+    public static PositionMotorSubsystem intakerExtension;
 
-    public static void init(Swerve swerve) {
+    public static void init(
+            Swerve swerve,
+            VelocityMotorSubsystem shooter,
+            SpindexerSubsystem spindexer,
+            PositionMotorSubsystem intakerExtension) {
         AutoRoutines.swerve = swerve;
+        AutoRoutines.shooter = shooter;
+        AutoRoutines.spindexer = spindexer;
+        AutoRoutines.intakerExtension = intakerExtension;
     }
 
     public static Command buildRoutineWithZeroing(Command routine) {
@@ -164,18 +178,23 @@ public class AutoRoutines {
     }
 
     public static Command rightLongFuel() {
+
         return Commands.defer(
                 () ->
-                        Commands.sequence(
-                                Commands.deadline(drivePastSlope(false, true), zeroEverything()),
-                                Commands.deadline(
-                                        followPathFile("longSweepRight", false), intake()),
-                                drivePastSlope(false, false),
-                                Commands.parallel(
-                                        shoot(),
+                        Commands.parallel(
+                                shooterDefault(),
+                                Commands.sequence(
                                         Commands.deadline(
-                                                allignToStation(), oscillateIntakeFeed()))),
-                Collections.singleton(swerve));
+                                                drivePastSlope(false, true), zeroEverything()),
+                                        Commands.deadline(
+                                                followPathFile("longSweepRight", false), intake()),
+                                        drivePastSlope(false, false),
+                                        Commands.parallel(
+                                                AutoActions.shoot(),
+                                                Commands.deadline(
+                                                        allignToStation(),
+                                                        oscillateIntakeFeed())))),
+                Set.of(swerve, shooter, spindexer));
     }
 
     public static Command shootAndClimb() {
